--- a/Scripts/Final_Scripts/3_prep_indices.Rmd
+++ b/Scripts/Final_Scripts/3_prep_indices.Rmd
@@ -29,68 +29,72 @@ and preparing the data i.e. excluding pixels with more than 4 consecutive months
 ##1. Data input by zone and extract anthropic thresholded raster two the three zones
 ```{r}
 #central 
-evi_mask_central<- rast(here("Data", "Indices", "AnisoEVI_Cerrado_GEE", "Zone_EVI", "anisoEVI_central.tif"))
-kndvi_mask_central<- rast(here("Data", "Indices", "kNDVI_Cerrado_GEE", "Zone_kndvi", "kndvi_central.tif"))
+aniso_mask_central<- rast(here("Data", "Indices", "AnisoEVI_Cerrado_GEE", "Zone_EVI", "anisoEVI_central.tif"))
 ndvi_mask_central<- rast(here("Data", "Indices", "Cerrado_monthlyNDVI_GEE", "Zone_ndvi", "ndvi_central.tif"))
+evi_mask_central<- rast(here("Data", "Indices", "Cerrado_monthlyEVI_GEE", "Zone_evi", "evi_central.tif"))
 
 #southern
-evi_mask_southern<- rast(here("Data", "Indices", "AnisoEVI_Cerrado_GEE","Zone_EVI", "anisoEVI_southern.tif"))
-kndvi_mask_southern<- rast(here("Data", "Indices", "kNDVI_Cerrado_GEE","Zone_kndvi", "kndvi_southern.tif"))
-ndvi_mask_southern<- rast(here("Data", "Indices", "Cerrado_monthlyNDVI_GEE","Zone_ndvi", "ndvi_southern.tif"))
+aniso_mask_southern<- rast(here("Data", "Indices", "AnisoEVI_Cerrado_GEE", "Zone_EVI", "anisoEVI_southern.tif"))
+ndvi_mask_southern<- rast(here("Data", "Indices", "Cerrado_monthlyNDVI_GEE", "Zone_ndvi", "ndvi_southern.tif"))
+evi_mask_southern<- rast(here("Data", "Indices", "Cerrado_monthlyEVI_GEE", "Zone_evi", "evi_southern.tif"))
 
 #eastern
-evi_mask_eastern<- rast(here("Data", "Indices", "AnisoEVI_Cerrado_GEE","Zone_EVI", "anisoEVI_eastern.tif"))
-kndvi_mask_eastern<- rast(here("Data", "Indices", "kNDVI_Cerrado_GEE","Zone_kndvi", "kndvi_eastern.tif"))
-ndvi_mask_eastern<- rast(here("Data", "Indices", "Cerrado_monthlyNDVI_GEE","Zone_ndvi", "ndvi_eastern.tif"))
+aniso_mask_eastern<- rast(here("Data", "Indices", "AnisoEVI_Cerrado_GEE", "Zone_EVI", "anisoEVI_eastern.tif"))
+ndvi_mask_eastern<- rast(here("Data", "Indices", "Cerrado_monthlyNDVI_GEE", "Zone_ndvi", "ndvi_eastern.tif"))
+evi_mask_eastern<- rast(here("Data", "Indices", "Cerrado_monthlyEVI_GEE", "Zone_evi", "evi_eastern.tif"))
 
-#10% anthropic mask
-thresh10_anthropic<- rast(here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresholded_mapbiomas_mask_10.tif"))
-thresh20_anthropic<- rast(here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresholded_mapbiomas_mask_20.tif"))
+names(evi_mask_central)<-names(aniso_mask_central)
+names(evi_mask_southern)<-names(aniso_mask_central)
+names(evi_mask_eastern)<-names(aniso_mask_central)
+
+# #10% anthropic mask
+# thresh10_anthropic<- rast(here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresholded_mapbiomas_mask_10.tif"))
+# thresh20_anthropic<- rast(here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresholded_mapbiomas_mask_20.tif"))
 
 d_trans<- st_read(here ("Data", "Cattelanetal_Clustering", "cerrado_climate_zones.shp"))
 d_trans<- st_transform(d_trans, crs = 4326)
 cerrado<- d_trans %>% st_union()
 
-Sys.time();thresh10_central<- terra::crop(thresh10_anthropic, vect(d_trans$geometry[[1]]))
-thresh10_central_mask<- terra::mask(thresh10_central, vect(d_trans$geometry[[1]])); Sys.time()
-Sys.time(); thresh10_southern<- terra::crop(thresh10_anthropic, vect(d_trans$geometry[[2]]))
-thresh10_southern_mask<- terra::mask(thresh10_southern, vect(d_trans$geometry[[2]])); Sys.time()
-Sys.time();thresh10_eastern<- terra::crop(thresh10_anthropic, vect(d_trans$geometry[[3]]))
-thresh10_eastern_mask<- terra::mask(thresh10_eastern, vect(d_trans$geometry[[3]])); Sys.time()
-remove(thresh10_central, thresh10_southern, thresh10_eastern)
-writeRaster(thresh10_central_mask, here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresh10_central.tif"))
-writeRaster(thresh10_southern_mask, here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresh10_southern.tif"))
-writeRaster(thresh10_eastern_mask, here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresh10_eastern.tif"))
-
-Sys.time();thresh20_central<- terra::crop(thresh20_anthropic, vect(d_trans$geometry[[1]]))
-thresh20_central_mask<- terra::mask(thresh20_central, vect(d_trans$geometry[[1]])); Sys.time()
-Sys.time(); thresh20_southern<- terra::crop(thresh20_anthropic, vect(d_trans$geometry[[2]]))
-thresh20_southern_mask<- terra::mask(thresh20_southern, vect(d_trans$geometry[[2]])); Sys.time()
-Sys.time();thresh20_eastern<- terra::crop(thresh20_anthropic, vect(d_trans$geometry[[3]]))
-thresh20_eastern_mask<- terra::mask(thresh20_eastern, vect(d_trans$geometry[[3]])); Sys.time()
-remove(thresh20_central, thresh20_southern, thresh20_eastern)
-writeRaster(thresh20_central_mask, here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresh20_central.tif"))
-writeRaster(thresh20_southern_mask, here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresh20_southern.tif"))
-writeRaster(thresh20_eastern_mask, here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresh20_eastern.tif"))
-
-remove(thresh10_anthropic, thresh10_central_mask, thresh10_eastern_mask, thresh10_southern_mask,
-       thresh20_anthropic, thresh20_central_mask, thresh20_eastern_mask, thresh20_southern_mask)
-remove(cerrado)
+# Sys.time();thresh10_central<- terra::crop(thresh10_anthropic, vect(d_trans$geometry[[1]]))
+# thresh10_central_mask<- terra::mask(thresh10_central, vect(d_trans$geometry[[1]])); Sys.time()
+# Sys.time(); thresh10_southern<- terra::crop(thresh10_anthropic, vect(d_trans$geometry[[2]]))
+# thresh10_southern_mask<- terra::mask(thresh10_southern, vect(d_trans$geometry[[2]])); Sys.time()
+# Sys.time();thresh10_eastern<- terra::crop(thresh10_anthropic, vect(d_trans$geometry[[3]]))
+# thresh10_eastern_mask<- terra::mask(thresh10_eastern, vect(d_trans$geometry[[3]])); Sys.time()
+# remove(thresh10_central, thresh10_southern, thresh10_eastern)
+# writeRaster(thresh10_central_mask, here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresh10_central.tif"))
+# writeRaster(thresh10_southern_mask, here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresh10_southern.tif"))
+# writeRaster(thresh10_eastern_mask, here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresh10_eastern.tif"))
+# 
+# Sys.time();thresh20_central<- terra::crop(thresh20_anthropic, vect(d_trans$geometry[[1]]))
+# thresh20_central_mask<- terra::mask(thresh20_central, vect(d_trans$geometry[[1]])); Sys.time()
+# Sys.time(); thresh20_southern<- terra::crop(thresh20_anthropic, vect(d_trans$geometry[[2]]))
+# thresh20_southern_mask<- terra::mask(thresh20_southern, vect(d_trans$geometry[[2]])); Sys.time()
+# Sys.time();thresh20_eastern<- terra::crop(thresh20_anthropic, vect(d_trans$geometry[[3]]))
+# thresh20_eastern_mask<- terra::mask(thresh20_eastern, vect(d_trans$geometry[[3]])); Sys.time()
+# remove(thresh20_central, thresh20_southern, thresh20_eastern)
+# writeRaster(thresh20_central_mask, here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresh20_central.tif"))
+# writeRaster(thresh20_southern_mask, here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresh20_southern.tif"))
+# writeRaster(thresh20_eastern_mask, here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "thresh20_eastern.tif"))
+# 
+# remove(thresh10_anthropic, thresh10_central_mask, thresh10_eastern_mask, thresh10_southern_mask,
+#        thresh20_anthropic, thresh20_central_mask, thresh20_eastern_mask, thresh20_southern_mask)
+# remove(cerrado)
 ```
 
-##2. Criteria 1 - Consider indices only from Jan 2001
+##2. Criteria 1 - Consider indices only from Jan 2002
 ```{r}
-evi_mask_central<-evi_mask_central[[23:263]]
-kndvi_mask_central<-kndvi_mask_central[[23:263]]
+aniso_mask_central<-aniso_mask_central[[23:263]]
 ndvi_mask_central<-ndvi_mask_central[[23:263]]
+evi_mask_central<- evi_mask_central[[23:263]]
 
-evi_mask_southern<-evi_mask_southern[[23:263]]
-kndvi_mask_southern<-kndvi_mask_southern[[23:263]]
+aniso_mask_southern<-aniso_mask_southern[[23:263]]
 ndvi_mask_southern<-ndvi_mask_southern[[23:263]]
+evi_mask_southern<- evi_mask_southern[[23:263]]
 
-evi_mask_eastern<-evi_mask_eastern[[23:263]]
-kndvi_mask_eastern<-kndvi_mask_eastern[[23:263]]
-ndvi_mask_eastern<-ndvi_mask_eastern[[23:263]]
+aniso_mask_eastern <-aniso_mask_eastern[[23:263]]
+ndvi_mask_eastern <-ndvi_mask_eastern[[23:263]]
+evi_mask_eastern <- evi_mask_eastern[[23:263]]
 
 ```
 
@@ -106,7 +110,7 @@ for each index in each zone
 #max(rle(y)$lengths[rle(y)$values]) #longest consecutive NA months i.e. 2 consectuive months of NA, 3 consecutive months of NA
 
 #1. Calculate number of consecutive missing/NA index values per year
-years<- seq(from=2001, to=2021, by=1)
+years<- seq(from=2002, to=2021, by=1)
 
 maxconsecutiveNA<- function (index_completeraster, zone_polygon, file_path1, zone_name){
   annual_index_list<- list() #making a list of spatrasters, where each spatrasters is annual with 12 months rasters in the stack
@@ -140,17 +144,18 @@ maxconsecutiveNA<- function (index_completeraster, zone_polygon, file_path1, zon
   }  
 }
 
-Sys.time(); maxconsecutiveNA(evi_mask_central, d_trans$geometry[[1]], file_path1 = "anisoEVI", zone_name = "central"); Sys.time()
-Sys.time(); maxconsecutiveNA(evi_mask_southern, d_trans$geometry[[2]], file_path1 = "anisoEVI", zone_name = "southern"); Sys.time()
-Sys.time(); maxconsecutiveNA(evi_mask_eastern, d_trans$geometry[[3]], file_path1 = "anisoEVI", zone_name = "eastern"); Sys.time()
 
-Sys.time(); maxconsecutiveNA(kndvi_mask_central, d_trans$geometry[[1]], file_path1 = "kNDVI", zone_name = "central"); Sys.time()
-Sys.time(); maxconsecutiveNA(kndvi_mask_southern, d_trans$geometry[[2]], file_path1 = "kNDVI", zone_name = "southern"); Sys.time()
-Sys.time(); maxconsecutiveNA(kndvi_mask_eastern, d_trans$geometry[[3]], file_path1 = "kNDVI", zone_name = "eastern"); Sys.time()
+Sys.time(); maxconsecutiveNA(aniso_mask_central, d_trans$geometry[[1]], file_path1 = "anisoEVI", zone_name = "central"); Sys.time()
+Sys.time(); maxconsecutiveNA(aniso_mask_southern, d_trans$geometry[[2]], file_path1 = "anisoEVI", zone_name = "southern"); Sys.time()
+Sys.time(); maxconsecutiveNA(aniso_mask_eastern, d_trans$geometry[[3]], file_path1 = "anisoEVI", zone_name = "eastern"); Sys.time()
 
 Sys.time(); maxconsecutiveNA(ndvi_mask_central, d_trans$geometry[[1]], file_path1 = "NDVI", zone_name = "central"); Sys.time()
 Sys.time(); maxconsecutiveNA(ndvi_mask_southern, d_trans$geometry[[2]], file_path1 = "NDVI", zone_name = "southern"); Sys.time()
 Sys.time(); maxconsecutiveNA(ndvi_mask_eastern, d_trans$geometry[[3]], file_path1 = "NDVI", zone_name = "eastern"); Sys.time()
+
+Sys.time(); maxconsecutiveNA(evi_mask_central, d_trans$geometry[[1]], file_path1 = "EVI", zone_name = "central"); Sys.time()#4 hours
+Sys.time(); maxconsecutiveNA(evi_mask_southern, d_trans$geometry[[2]], file_path1 = "EVI", zone_name = "southern"); Sys.time()
+Sys.time(); maxconsecutiveNA(evi_mask_eastern, d_trans$geometry[[3]], file_path1 = "EVI", zone_name = "eastern"); Sys.time()
 
 remove(years, maxconsecutiveNA)
 
@@ -180,15 +185,15 @@ eastern_max_consecutiveNA_function<- function (index_path){
 }
 
 Sys.time(); central_max_consecutiveNA_function("NDVI"); Sys.time()
-Sys.time(); central_max_consecutiveNA_function("kNDVI"); Sys.time()
+Sys.time(); central_max_consecutiveNA_function("EVI"); Sys.time() #1 min
 Sys.time(); central_max_consecutiveNA_function("anisoEVI"); Sys.time()
 
 Sys.time(); southern_max_consecutiveNA_function("NDVI"); Sys.time()
-Sys.time(); southern_max_consecutiveNA_function("kNDVI"); Sys.time()
+Sys.time(); southern_max_consecutiveNA_function("EVI"); Sys.time()# less than a min
 Sys.time(); southern_max_consecutiveNA_function("anisoEVI"); Sys.time()
 
 Sys.time(); eastern_max_consecutiveNA_function("NDVI"); Sys.time()
-Sys.time(); eastern_max_consecutiveNA_function("kNDVI"); Sys.time()
+Sys.time(); eastern_max_consecutiveNA_function("EVI"); Sys.time()# less than a min
 Sys.time(); eastern_max_consecutiveNA_function("anisoEVI"); Sys.time()
 
 remove(central_max_consecutiveNA_function, eastern_max_consecutiveNA_function, southern_max_consecutiveNA_function)
@@ -208,7 +213,7 @@ print (paste0("Counter =",i))
 } 
 
 Sys.time(); max_consecutive_mask("anisoEVI"); Sys.time()
-Sys.time(); max_consecutive_mask("kNDVI"); Sys.time()
+Sys.time(); max_consecutive_mask("EVI"); Sys.time()
 Sys.time(); max_consecutive_mask("NDVI"); Sys.time()
 
 remove(max_consecutive_mask, m)
@@ -227,17 +232,17 @@ final_mask_function<- function(time_series_raster_list, index_path){
   print (paste0("Counter=", i))
 }
 
-anisoEVI_list<- list(evi_mask_central, evi_mask_eastern, evi_mask_southern)
+anisoEVI_list<- list(aniso_mask_central, aniso_mask_eastern, aniso_mask_southern)
 Sys.time(); final_mask_function(anisoEVI_list, "anisoEVI"); Sys.time()
 ndvi_list<- list(ndvi_mask_central, ndvi_mask_eastern, ndvi_mask_southern)
 Sys.time(); final_mask_function(ndvi_list, "NDVI"); Sys.time()
-kndvi_list<- list(kndvi_mask_central, kndvi_mask_eastern, kndvi_mask_southern)
-Sys.time(); final_mask_function(kndvi_list, "kNDVI"); Sys.time()
+evi_list<- list(evi_mask_central, evi_mask_eastern, evi_mask_southern)
+Sys.time(); final_mask_function(evi_list, "EVI"); Sys.time()
 
 remove(final_mask_function)
-remove(anisoEVI_list, ndvi_list, kndvi_list)
-remove(evi_mask_central, evi_mask_eastern, evi_mask_southern, kndvi_mask_central,
-       kndvi_mask_eastern, kndvi_mask_southern, ndvi_mask_central, ndvi_mask_eastern,
+remove(anisoEVI_list, ndvi_list, evi_list)
+remove(evi_mask_central, evi_mask_eastern, evi_mask_southern, aniso_mask_central,
+       aniso_mask_eastern, aniso_mask_southern, ndvi_mask_central, ndvi_mask_eastern,
        ndvi_mask_southern)
 
 ```
@@ -250,24 +255,79 @@ linear_interpolation_function<- function(index_path){
   file_p<- list.files(here("Outputs", "Indices", index_path ,"Max_consecutive_missingNA"), 
                       pattern= "^masked_", all.files=TRUE, full.names=TRUE)
   masked_raster_list<- lapply(file_p, rast)
-
-  for (i in 1:length(masked_raster_list)){
-    df_criteria1<- terra::as.data.frame(masked_raster_list[[i]], xy=T, cell=T)
-    pivot_df_criteria1<- pivot_longer(df_criteria1, 4:243)
-    pivot_df_criteria1<- pivot_df_criteria1 %>% 
-                    mutate(Year = substring (name,1, 4), Month = substring (name, 6))
-    pivot_df_criteria1<- pivot_df_criteria1 %>%
-      group_by(cell) %>%
-      mutate(value_int = imputeTS::na_interpolation(value, option = "linear", maxgap = 1))
   
-    write_rds(pivot_df_criteria1, here("Outputs", "Indices", index_path, "Max_consecutive_missingNA",
-                                 paste0("int_",strsplit(strsplit(strsplit(file_p[[i]], "/")[[1]][11], "_")[[1]][2], ".tif")[[1]][1], ".rds"                                                                                                                )    ))
-    remove(df_criteria1, pivot_df_criteria1)
+  impute_oneNA_function<- function(x){
+    if (all(is.na(x))){
+      return (x)
+    } else {
+      x<- imputeTS::na_interpolation(x, option = "linear", maxgap = 1)
+      return(x)
+    }
+  }
+  
+    for (i in 1:length(masked_raster_list)){
+    print ("Starting imputation")
+    Sys.time(); imputed_raster<- terra::app(masked_raster_list[[i]], fun = impute_oneNA_function); Sys.time()
+    Sys.time();writeRaster(imputed_raster, here("Outputs", "Indices", index_path, "Max_consecutive_missingNA",
+                                 paste0("int_", strsplit(strsplit(strsplit(file_p[[i]], "/")[[1]][11], "_")[[1]][2], ".tif")[[1]][1], ".tif"))); Sys.time()
+    print ("Check file on disk")
+    print (paste0("Counter = ",i))
   }
 }
 
+
 Sys.time(); linear_interpolation_function("anisoEVI"); Sys.time()
-Sys.time(); linear_interpolation_function("kNDVI"); Sys.time()
+Sys.time(); linear_interpolation_function("EVI"); Sys.time()
 Sys.time(); linear_interpolation_function("NDVI"); Sys.time()
 
 ```
+
+
+##5. Criteria 4 - For pixels with 2 or 3 continuous missing index values, use mean index values for that pixel from other months for which the month is missing. For example is April 2005 is NA for pixel A, then for that pixel use mean of remaining Aprils to fill the NA value
+
+```{r}
+convert_to_df<- function(raster_stack, index_path, climate_zone){
+    trial_df<-terra::as.data.frame(raster_stack,xy=TRUE, cell=TRUE); 
+    
+    pivot_trial_df<- pivot_longer(trial_df, 4:243); Sys.time() 
+    pivot_trial_df<- pivot_trial_df %>% mutate(
+      Year = substring (name,1, 4) %>% as.numeric(),
+      Month = substring (name, 6) %>% as.numeric());
+    
+    pivot_trial_df <- pivot_trial_df%>%
+      group_by(cell, Month) %>%
+      mutate(value_mean = mean(value, na.rm=T)) %>%
+      mutate(value_int= ifelse(is.na(value), value_mean, value)) %>%
+      select(-value_mean); Sys.time()
+    
+    write_rds(pivot_trial_df, here("Outputs", "Indices", index_path, "Max_consecutive_missingNA",
+                                   paste0("meanfill_",index_path, "_", climate_zone, ".rds")))
+}
+
+raster_filepath <- list.files(path = here("Outputs", "Indices", "anisoEVI","Max_consecutive_missingNA"), pattern= "^int_", all.files=TRUE, full.names=TRUE)
+raster_list<-lapply(raster_filepath, rast);
+Sys.time(); convert_to_df(raster_list[[1]], "anisoEVI", "central"); Sys.time() #20min
+Sys.time(); convert_to_df(raster_list[[2]], "anisoEVI", "eastern"); Sys.time() #9min
+Sys.time(); convert_to_df(raster_list[[3]], "anisoEVI", "southern"); Sys.time() #3min
+remove(raster_filepath, raster_list)
+
+
+raster_filepath <- list.files(path = here("Outputs", "Indices", "NDVI","Max_consecutive_missingNA"), pattern= "^int_", all.files=TRUE, full.names=TRUE)
+raster_list<-lapply(raster_filepath, rast);
+Sys.time(); convert_to_df(raster_list[[1]], "NDVI", "central"); Sys.time() 
+Sys.time(); convert_to_df(raster_list[[2]], "NDVI", "eastern"); Sys.time() 
+Sys.time(); convert_to_df(raster_list[[3]], "NDVI", "southern"); Sys.time()
+remove(raster_filepath, raster_list)
+gc()
+
+raster_filepath <- list.files(path = here("Outputs", "Indices", "EVI","Max_consecutive_missingNA"), pattern= "^int_", all.files=TRUE, full.names=TRUE)
+raster_list<-lapply(raster_filepath, rast);
+Sys.time(); convert_to_df(raster_list[[1]], "EVI", "central"); Sys.time() 
+Sys.time(); convert_to_df(raster_list[[2]], "EVI", "eastern"); Sys.time() 
+Sys.time(); convert_to_df(raster_list[[3]], "EVI", "southern"); Sys.time()
+remove(raster_filepath, raster_list)
+
+```
+
+
+
