--- a/Scripts/Final_Scripts/1_studyarea_delineation.Rmd
+++ b/Scripts/Final_Scripts/1_studyarea_delineation.Rmd
@@ -58,7 +58,7 @@ map_extent<- st_bbox(c(xmin=-77.59, xmax=-31.09,
 tmap_mode("plot")
 mapbiomas_animation_map<-tm_shape(neighbors, bbox = map_extent)+ tm_borders()+
   tm_shape( mapbiomas_mask)+
-  tm_raster(style = 'cont',palette= get_brewer_pal("YlGnBu"), title="anisoEVI") + 
+  tm_raster(style = 'cont',palette= get_brewer_pal("YlGnBu"), title="%pixel that is anthropic") + 
               tm_layout (legend.position = c("left", "bottom"))+
               tm_facets(nrow=1, ncol=1, free.coords = FALSE)+
   tm_shape(d_trans)+ tm_borders()
@@ -69,7 +69,7 @@ tic();tmap_animation(mapbiomas_animation_map, filename = here("Data", "Masks_to_
 remove(neighbors, map_extent, mapbiomas_animation_map)
 
 #2. % of climate zone that is anthropic (any proportion) per year in each climate zone
-calc_df<- tibble(year= 1985:2022)
+calc_df<- tibble(year= 1985:2023)
 list_rasters<- list()
 for(i in 1:nlyr(mapbiomas_mask)){
   list_rasters[[i]]<- mapbiomas_mask[[i]]
@@ -178,7 +178,7 @@ remove(q, pivot_boxplot_df, boxplot_df)
 histogram_df<- calc_df %>% dplyr::select(c(year, central_values, southern_values, eastern_values))
 pivot_histogram_df<- pivot_longer(histogram_df, 2:4)
 pivot_histogram_df<- pivot_histogram_df %>% unnest(value)
-pivot_histogram_df<- pivot_histogram_df %>% filter(frac_anthropic<1) #excluding pixels where 100% is anthropic because
+#pivot_histogram_df<- pivot_histogram_df %>% filter(frac_anthropic<1) #excluding pixels where 100% is anthropic because
 #I will exclude these for sure
 
 library(gganimate)
@@ -199,15 +199,14 @@ remove(r, histogram_df, pivot_histogram_df)
 
 According to Mattos et al., 2023, "we use an 80% valid threshold to avoid small 
 sample sizes inside each larger pixel."I interpret this as 80% is the cut-off i.e. 
-more than 80% of larger pixel is natural and less than 20% is anthropic. 
+more than 80% of larger pixel is natural. Hence 20% the limit for anthropic in larger pixel. 
 
-The violin plot from previous chunk is not useful because there are too many pixels
-to understand the distribution. I can make a decision, like Mattos et al, that
-I will retain pixels. Looking at the histograms, the central zone seems to have
-a slightly longer tail towards 25% anthropic than the other 2 zones. 
-I make a decision that if the maximum %anthropic through time for a pixel reaches
-10% (0.1), we exclude that pixel completely. I also try 20% to understand 
-how much more pixels are included. 
+From area_anthropic output figure, >90% of southern region is anthropic, central region was already
+about 70% anthropic in 1985 and eastern region was about 55% anthropic in 1985. So choosing a 20%
+threshold like Mattos et al will mean that very,very little "native" area will remain. 
+
+I can make a decision, like Mattos et al, I will retain pixels across all 3 zones
+such that 20% is the maximum anthropic area. I also use 10% & 30% as a threshold.
 
 ```{r}
 mapbiomas_mask
@@ -218,40 +217,48 @@ tp_mapbiomas_mask<- mapbiomas_mask[[18:37]]
 
 #2. Exclude all pixels where pixel value in any year >0.1
 threshold_function<- function (i){
-  ifelse(max(i)>0.2, NA, i) #change threshold to 0.1,0.2....
+  ifelse(max(i)>0.3, NA, i) #change threshold to 0.1,0.2....
 }
 Sys.time(); threshold_mapbiomas_mask_10<- terra::app(tp_mapbiomas_mask, fun= threshold_function); Sys.time()#1min
 #writeRaster(threshold_mapbiomas_mask_10, here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "thresholded_mapbiomas_mask_10.tif"))
 Sys.time(); threshold_mapbiomas_mask_20<- terra::app(tp_mapbiomas_mask, fun= threshold_function); Sys.time()#1min
 #writeRaster(threshold_mapbiomas_mask_20, here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "thresholded_mapbiomas_mask_20.tif"))
+Sys.time(); threshold_mapbiomas_mask_30<- terra::app(tp_mapbiomas_mask, fun= threshold_function); Sys.time()#1min
+#writeRaster(threshold_mapbiomas_mask_30, here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "thresholded_mapbiomas_mask_30.tif"))
 remove(threshold_function)
 
 #3. Map of thresholded rasters
 #lines 51- 57
 thresh10_mapbiomas_map<-tm_shape(neighbors, bbox = map_extent)+ tm_borders()+
   tm_shape( threshold_mapbiomas_mask_10)+
-  tm_raster(style = 'cont',palette= get_brewer_pal("YlGnBu"), title="anisoEVI") + 
+  tm_raster(style = 'cont',palette= get_brewer_pal("Reds"), n=5, breaks = seq(0,0.3,0.05), title="10% threshold") + 
               tm_layout (legend.position = c("left", "bottom"))+
               tm_facets(nrow=1, ncol=1, free.coords = FALSE)+
   tm_shape(d_trans)+ tm_borders()
-  
-#tic();tmap_save(thresh10_mapbiomas_map, 
-#filename = here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", 
-#"thresh10_Mapbiomass_anthropic_LULC_mask.png"),
-#               width = 900, height = 900, dpi = 150) ;toc() 
+
 thresh20_mapbiomas_map<-tm_shape(neighbors, bbox = map_extent)+ tm_borders()+
   tm_shape( threshold_mapbiomas_mask_20)+
-  tm_raster(style = 'cont',palette= get_brewer_pal("YlGnBu"), title="anisoEVI") + 
+  tm_raster(style = 'cont',palette= get_brewer_pal("Reds"), n=5, breaks = seq(0,0.3,0.05), title="20% threshold") + 
               tm_layout (legend.position = c("left", "bottom"))+
               tm_facets(nrow=1, ncol=1, free.coords = FALSE)+
   tm_shape(d_trans)+ tm_borders()
-#tic();tmap_save(thresh20_mapbiomas_map, 
-#filename = here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "thresh20_Mapbiomass_anthropic_LULC_mask.png"),
-#               width = 900, height = 900, dpi = 150) ;toc() 
-remove(neighbors, map_extent, thresh10_mapbiomas_map, thresh20_mapbiomas_map)
 
 
-#4. Area after excluding pixels with >10% and >20% anthropic (anytime)
+thresh30_mapbiomas_map<-tm_shape(neighbors, bbox = map_extent)+ tm_borders()+
+  tm_shape( threshold_mapbiomas_mask_30)+
+  tm_raster(style = 'cont',palette= get_brewer_pal("Reds"), n=5, breaks = seq(0,0.3,0.05), title="30% threshold") + 
+              tm_layout (legend.position = c("left", "bottom"))+
+              tm_facets(nrow=1, ncol=1, free.coords = FALSE)+
+  tm_shape(d_trans)+ tm_borders()
+
+all_maps<- tmap_arrange(thresh10_mapbiomas_map, thresh20_mapbiomas_map, thresh30_mapbiomas_map)
+tic();tmap_save(all_maps, 
+filename = here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "threshold_Mapbiomass_anthropic_LULC_mask.png"),
+               width = 900, height = 900, dpi = 150) ;toc() 
+remove(neighbors, map_extent, thresh10_mapbiomas_map, thresh20_mapbiomas_map, thresh30_mapbiomas_map, all_maps)
+
+
+#4. Area after excluding pixels with >10%, >20% and 30% anthropic (anytime)
 calc_df<- calc_df %>% dplyr::select(-c(central_values, southern_values, eastern_values))
 list_threshold10_rasters<- list()
 for(i in 1:nlyr(threshold_mapbiomas_mask_10)){
@@ -267,6 +274,13 @@ for(i in 1:nlyr(threshold_mapbiomas_mask_20)){
 calc_df<- calc_df %>% mutate(thresh20_anthropic_raster= list_threshold20_rasters)
 remove(list_threshold20_rasters,i)
 
+list_threshold30_rasters<- list()
+for(i in 1:nlyr(threshold_mapbiomas_mask_30)){
+  list_threshold30_rasters[[i]]<- threshold_mapbiomas_mask_30[[i]]
+}
+calc_df<- calc_df %>% mutate(thresh30_anthropic_raster= list_threshold30_rasters)
+remove(list_threshold30_rasters,i)
+
 #lines 80-94
 Sys.time(); calc_df<- calc_df %>% mutate(threshold10_central= purrr::map(thresh10_anthropic_raster, central_cropmask_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(threshold10_southern= purrr::map(thresh10_anthropic_raster, southern_cropmask_function)); Sys.time()
@@ -275,6 +289,10 @@ Sys.time(); calc_df<- calc_df %>% mutate(threshold10_eastern= purrr::map(thresh1
 Sys.time(); calc_df<- calc_df %>% mutate(threshold20_central= purrr::map(thresh20_anthropic_raster, central_cropmask_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(threshold20_southern= purrr::map(thresh20_anthropic_raster, southern_cropmask_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(threshold20_eastern= purrr::map(thresh20_anthropic_raster, eastern_cropmask_function)); Sys.time()
+
+Sys.time(); calc_df<- calc_df %>% mutate(threshold30_central= purrr::map(thresh30_anthropic_raster, central_cropmask_function)); Sys.time()
+Sys.time(); calc_df<- calc_df %>% mutate(threshold30_southern= purrr::map(thresh30_anthropic_raster, southern_cropmask_function)); Sys.time()
+Sys.time(); calc_df<- calc_df %>% mutate(threshold30_eastern= purrr::map(thresh30_anthropic_raster, eastern_cropmask_function)); Sys.time()
 remove(central_cropmask_function, southern_cropmask_function, eastern_cropmask_function)
 
 #lines 100-102
@@ -285,6 +303,10 @@ Sys.time(); calc_df<- calc_df %>% mutate(thresh10_eastern_reclass= purrr::map(th
 Sys.time(); calc_df<- calc_df %>% mutate(thresh20_central_reclass= purrr::map(threshold20_central, reclass_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(thresh20_southern_reclass= purrr::map(threshold20_southern, reclass_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(thresh20_eastern_reclass= purrr::map(threshold20_eastern, reclass_function)); Sys.time()
+
+Sys.time(); calc_df<- calc_df %>% mutate(thresh30_central_reclass= purrr::map(threshold30_central, reclass_function)); Sys.time()
+Sys.time(); calc_df<- calc_df %>% mutate(thresh30_southern_reclass= purrr::map(threshold30_southern, reclass_function)); Sys.time()
+Sys.time(); calc_df<- calc_df %>% mutate(thresh30_eastern_reclass= purrr::map(threshold30_eastern, reclass_function)); Sys.time()
 remove(reclass_function)
 
 #lines 108-110
@@ -295,6 +317,10 @@ Sys.time(); calc_df<- calc_df %>% mutate(thresh10_eastern_anthropic_areakm= purr
 Sys.time(); calc_df<- calc_df %>% mutate(thresh20_central_anthropic_areakm= purrr::map(thresh20_central_reclass, area_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(thresh20_southern_anthropic_areakm= purrr::map(thresh20_southern_reclass, area_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(thresh20_eastern_anthropic_areakm= purrr::map(thresh20_eastern_reclass, area_function)); Sys.time()
+
+Sys.time(); calc_df<- calc_df %>% mutate(thresh30_central_anthropic_areakm= purrr::map(thresh30_central_reclass, area_function)); Sys.time()
+Sys.time(); calc_df<- calc_df %>% mutate(thresh30_southern_anthropic_areakm= purrr::map(thresh30_southern_reclass, area_function)); Sys.time()
+Sys.time(); calc_df<- calc_df %>% mutate(thresh30_eastern_anthropic_areakm= purrr::map(thresh30_eastern_reclass, area_function)); Sys.time()
 remove(area_function)
 
 #lines 116-118
@@ -305,6 +331,10 @@ Sys.time(); calc_df<- calc_df %>% mutate(thresh10_eastern_anthropic_totalareakm=
 Sys.time(); calc_df<- calc_df %>% mutate(thresh20_central_anthropic_totalareakm= purrr::map(thresh20_central_anthropic_areakm, total_area_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(thresh20_southern_anthropic_totalareakm= purrr::map(thresh20_southern_anthropic_areakm, total_area_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(thresh20_eastern_anthropic_totalareakm= purrr::map(thresh20_eastern_anthropic_areakm, total_area_function)); Sys.time()
+
+Sys.time(); calc_df<- calc_df %>% mutate(thresh30_central_anthropic_totalareakm= purrr::map(thresh30_central_anthropic_areakm, total_area_function)); Sys.time()
+Sys.time(); calc_df<- calc_df %>% mutate(thresh30_southern_anthropic_totalareakm= purrr::map(thresh30_southern_anthropic_areakm, total_area_function)); Sys.time()
+Sys.time(); calc_df<- calc_df %>% mutate(thresh30_eastern_anthropic_totalareakm= purrr::map(thresh30_eastern_anthropic_areakm, total_area_function)); Sys.time()
 remove(total_area_function)
 
 thresh_area_anthropic_df<- calc_df %>% dplyr::select(c(year, thresh10_central_anthropic_totalareakm, 
@@ -312,14 +342,20 @@ thresh_area_anthropic_df<- calc_df %>% dplyr::select(c(year, thresh10_central_an
                                                        thresh10_eastern_anthropic_totalareakm,
                                                        thresh20_central_anthropic_totalareakm, 
                                                        thresh20_southern_anthropic_totalareakm, 
-                                                       thresh20_eastern_anthropic_totalareakm)) 
+                                                       thresh20_eastern_anthropic_totalareakm,
+                                                       thresh30_central_anthropic_totalareakm,
+                                                       thresh30_southern_anthropic_totalareakm,
+                                                       thresh30_eastern_anthropic_totalareakm,
+                                                       )) 
 thresh_area_anthropic_df$thresh10_central_anthropic_totalareakm<- unlist(thresh_area_anthropic_df$thresh10_central_anthropic_totalareakm)
 thresh_area_anthropic_df$thresh10_southern_anthropic_totalareakm<- unlist(thresh_area_anthropic_df$thresh10_southern_anthropic_totalareakm)
 thresh_area_anthropic_df$thresh10_eastern_anthropic_totalareakm<- unlist(thresh_area_anthropic_df$thresh10_eastern_anthropic_totalareakm)
 thresh_area_anthropic_df$thresh20_central_anthropic_totalareakm<- unlist(thresh_area_anthropic_df$thresh20_central_anthropic_totalareakm)
 thresh_area_anthropic_df$thresh20_southern_anthropic_totalareakm<- unlist(thresh_area_anthropic_df$thresh20_southern_anthropic_totalareakm)
 thresh_area_anthropic_df$thresh20_eastern_anthropic_totalareakm<- unlist(thresh_area_anthropic_df$thresh20_eastern_anthropic_totalareakm)
-
+thresh_area_anthropic_df$thresh30_central_anthropic_totalareakm<- unlist(thresh_area_anthropic_df$thresh30_central_anthropic_totalareakm)
+thresh_area_anthropic_df$thresh30_southern_anthropic_totalareakm<- unlist(thresh_area_anthropic_df$thresh30_southern_anthropic_totalareakm)
+thresh_area_anthropic_df$thresh30_eastern_anthropic_totalareakm<- unlist(thresh_area_anthropic_df$thresh30_eastern_anthropic_totalareakm)
 
 thresh_area_anthropic_df<- thresh_area_anthropic_df %>% 
   mutate(thresh10_central_percent_anthropic= (thresh10_central_anthropic_totalareakm/d_trans$area_km[[1]])*100)
@@ -335,18 +371,29 @@ thresh_area_anthropic_df<- thresh_area_anthropic_df %>%
 thresh_area_anthropic_df<- thresh_area_anthropic_df %>% 
   mutate(thresh20_eastern_percent_anthropic= (thresh20_eastern_anthropic_totalareakm/d_trans$area_km[[3]])*100)
 
+thresh_area_anthropic_df<- thresh_area_anthropic_df %>% 
+  mutate(thresh30_central_percent_anthropic= (thresh30_central_anthropic_totalareakm/d_trans$area_km[[1]])*100)
+thresh_area_anthropic_df<- thresh_area_anthropic_df %>% 
+  mutate(thresh30_southern_percent_anthropic= (thresh30_southern_anthropic_totalareakm/d_trans$area_km[[2]])*100)
+thresh_area_anthropic_df<- thresh_area_anthropic_df %>% 
+  mutate(thresh30_eastern_percent_anthropic= (thresh30_eastern_anthropic_totalareakm/d_trans$area_km[[3]])*100)
+
 
 pivot_thresharea_anthropic_df<- pivot_longer(thresh_area_anthropic_df %>% dplyr::select(year, thresh10_central_percent_anthropic, 
                                                                            thresh10_southern_percent_anthropic, thresh10_eastern_percent_anthropic,
                                                                            thresh20_central_percent_anthropic, thresh20_southern_percent_anthropic,
-                                                                           thresh20_eastern_percent_anthropic), 2:7)
+                                                                           thresh20_eastern_percent_anthropic,
+                                                                           thresh30_eastern_percent_anthropic,
+                                                                           thresh30_southern_percent_anthropic,
+                                                                           thresh30_central_percent_anthropic
+                                                                           ), 2:10)
 
 pivot_thresharea_anthropic_df<- pivot_thresharea_anthropic_df %>% 
   separate_wider_delim(cols = name, delim = "_", names = c("Thresh","Zone", "Percent","Anthropic"))
 pivot_thresharea_anthropic_df<- pivot_thresharea_anthropic_df %>% dplyr::select(-c(Percent, Anthropic))
 pivot_thresharea_anthropic_df<- pivot_wider(pivot_thresharea_anthropic_df, names_from = Thresh, values_from = value)
 #The values are repeated every year because that is the exclusion I have done
-#If a pixel in ANY year cross the 10% anthropic threshold, that pixel through
+#If a pixel in ANY year cross the 10%,20% or 30% anthropic threshold, that pixel through
 #time is removed. So the remaining area is the final area and is constant
 #through time. 
 
@@ -363,7 +410,8 @@ s<-ggplot(pivot_df, aes(x=factor(year), group=Zone)) +
   geom_line(aes(y=value1, color=Zone))+
   geom_point(aes(y=value1,color=Zone))+
   geom_line(aes(y=thresh10, color=Zone), linetype= "dashed")+
-  geom_line(aes(y=thresh20, color=Zone))+
+  geom_line(aes(y=thresh20, color=Zone), linetype="3313")+
+  geom_line(aes(y=thresh30, color=Zone))+
   ylab("% of pixels in region that are anthropic (any proportion)") +
   xlab("Year")
 s<- s+scale_color_brewer(labels= c("Central", "Eastern", "Southern"), palette = "Dark2") +
@@ -381,12 +429,3 @@ remove(pivot_area_anthropic_df, pivot_df, pivot_thresharea_anthropic_df)
 remove(s)
 remove(area_anthropic_df, thresh_area_anthropic_df)
 ```
-
-For central zone, average area of anthropic through time is 12.09% and it drops to 9.02% for 10% threshold,
-and 10.2% for 20%  threshold. For southern zone, previously it is 7.53% and it drops to 6.016%
-for the 10% threshold and 6.43% for the 20% threshold. And for the eastern zone
-it is 10.33% and drops to 8.01% fpr the 10% threshold and to 9.07% for the 20% threshold.
-An approximate drop of 1-3% in each zone.
-
-10% might be too conservative a cut off that is lots of pixels are getting excluded. Need to 
-run through with advisors
